--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "redux-persist": "^6.0.0",
     "router-dom": "^3.0.1"
   },
   "devDependencies": {
